Segmentation fault when connecting node group using Properties editor #57586

Closed
opened 2018-11-02 16:45:48 +01:00 by Sam Van Hulle · 3 comments

System Information
Linux, GTX 1080

Blender Version
2.80 10d7ebc469b

Short description of error
When the Properties editor (instead of the Node Editor) is used to connect a Node Group to an attribute of a shader, Blender crashes with a segmentation fault.

Exact steps for others to reproduce the error
Add any node group to any attribute of any shader, using the Properties editor.

**System Information** Linux, GTX 1080 **Blender Version** 2.80 10d7ebc469b **Short description of error** When the Properties editor (instead of the Node Editor) is used to connect a Node Group to an attribute of a shader, Blender crashes with a segmentation fault. **Exact steps for others to reproduce the error** Add any node group to any attribute of any shader, using the Properties editor.
Author

Added subscriber: @frameshift

Added subscriber: @frameshift

This issue was referenced by blender/blender@3f9a751d47

This issue was referenced by blender/blender@3f9a751d4799616e138e0e6373f6425741384098

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#57586
No description provided.