Fix T57586: crash linking node group through material properties editor.